sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:3: error: not found: value test
  test=false
  ^AlgCocktailSort1:4: error: not found: value test
  while (!test){
          ^AlgCocktailSort1:5: error: not found: value test
    test = true
    ^AlgCocktailSort1:6: error: not found: value getNombreValeur
    for (i <- 1 to getNombreValeur()-2){
                   ^AlgCocktailSort1:8: error: not found: value test
        test = false
        ^AlgCocktailSort1:12: error: not found: value c
    c=getNombreValeur()
    ^AlgCocktailSort1:13: error: not found: value i
    while(i!=2){
          ^AlgCocktailSort1:14: error: not found: value i
      i-=1
      ^AlgCocktailSort1:15: error: not found: value i
      if (plusPetit(i-1,i)){
                    ^AlgCocktailSort1:15: error: not found: value i
      if (plusPetit(i-1,i)){
                        ^AlgCocktailSort1:16: error: not found: value test
        test = false
        ^AlgCocktailSort1:17: error: not found: value i
        echange(i-1,i)
                ^AlgCocktailSort1:17: error: not found: value i
        echange(i-1,i)
                    ^